Add which key, assign separate book to hydra, setup projectile hydra

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 /elpa/async-20161103.1036/async-bytecomp.el
 /elpa/async-20161103.1036/async-bytecomp.elc
 /README.org~
+/auto-save-list/.saves-21739-SanDisk~
+/books/bookofhydra.el~
+/books/bookofsemantic.el~
