Add some clutter to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,12 @@
 /books/bookofsemantic.el~
 /srecode-map.el
 /.org-id-locations
+/books/bookofbooks.el~
+/cider-history
+/%backup%~
+/abbrev_defs
+/auto-save-list/.saves-11333-amm~
+/auto-save-list/.saves-1234-amm~
+/auto-save-list/.saves-14432-amm~
+/auto-save-list/.saves-15388-amm~
+/*.el
